# Plasma

./: .gitignore  BuildMSVC.bat  CMakeLists.txt  CreateBuild.py  License.txt  OpenEditorWithMemoryDebugger.cmd  README.md  index.js  package-lock.json
Extensions/: CMakeLists.txt
Extensions/CodeTranslator/: CMakeLists.txt  CodeSplitWindow.cpp  CodeSplitWindow.hpp  CodeTranslatorCommands.cpp  CodeTranslatorCommands.hpp  CodeTranslatorStandard.hpp  Precompiled.cpp  Precompiled.hpp  ShaderTranslationDebugHelper.cpp  ShaderTranslationDebugHelper.hpp
Extensions/Editor/: AddRemoveListBox.cpp  AddRemoveListBox.hpp  AddWindow.cpp  AddWindow.hpp  AllCommands.hpp  AnimationControls.cpp  AnimationControls.hpp  AnimationEditor.cpp  AnimationEditor.hpp  AnimationEditorData.cpp  AnimationEditorData.hpp  AnimationGraph.cpp  AnimationGraph.hpp  AnimationScrubber.cpp  AnimationScrubber.hpp  AnimationSettings.cpp  AnimationSettings.hpp  AnimationTrackView.cpp  AnimationTrackView.hpp  AppCommands.cpp  ArchiveProjectCommands.cpp  BackgroundTask.cpp  BackgroundTask.hpp  BackgroundTaskUi.cpp  BackgroundTaskUi.hpp  BasicGizmos.cpp  BasicGizmos.hpp  BroadPhaseEditor.cpp  BroadPhaseEditor.hpp  BugReport.cpp  BugReport.hpp  CMakeLists.txt  ClothTools.cpp  ClothTools.hpp  CogCommand.cpp  CogCommand.hpp  CollisionTableEditor.cpp  CollisionTableEditor.hpp  ColorGradientEditor.cpp  ColorGradientEditor.hpp  (+194 more)
Extensions/Gameplay/: CMakeLists.txt  CameraViewport.cpp  CameraViewport.hpp  CsgExternalSerialization.hpp  DefaultGame.cpp  DefaultGame.hpp  EmscriptenExportTarget.cpp  Exporter.cpp  Exporter.hpp  GameplayStandard.cpp  GameplayStandard.hpp  Generated.cmake  Importer.cpp  Importer.hpp  IndexedHalfEdgeMesh.cpp  IndexedHalfEdgeMesh.hpp  MarchingCubes.cpp  MarchingCubes.hpp  MarchingSquares.cpp  MarchingSquares.hpp  MouseCapture.cpp  MouseCapture.hpp  Orientation.cpp  Orientation.hpp  Plasma.cpp  Plasma.hpp  PlayGame.cpp  PlayGame.hpp  Precompiled.hpp  QuickHull3DBindings.cpp  QuickHull3DBindings.hpp  RandomContext.cpp  RandomContext.hpp  Reactive.cpp  Reactive.hpp  ReactiveViewport.cpp  ReactiveViewport.hpp  SplineParticles.cpp  SplineParticles.hpp  TileMap.cpp  (+11 more)
Extensions/LightningShaders/: ArithmeticInstructions.cpp  BaseShaderIRTranslator.hpp  BitInstructions.cpp  CMakeLists.txt  CommonInstructions.cpp  CommonInstructions.hpp  ConversionInstructions.cpp  CycleDetection.cpp  CycleDetection.hpp  EntryPointGeneration.cpp  EntryPointGeneration.hpp  ExtensionLibrary.cpp  ExtensionLibrary.hpp  FixedArray.cpp  ForwardDeclarations.hpp  Generated.cmake  Glsl450Extensions.cpp  LibraryTranslationHelpers.cpp  LibraryTranslationHelpers.hpp  LightningShaderGlslBackend.cpp  LightningShaderGlslBackend.hpp  LightningShaderIRCompositor.cpp  LightningShaderIRCompositor.hpp  LightningShaderIRCore.cpp  LightningShaderIRCore.hpp  LightningShaderIRExtendedTypes.cpp  LightningShaderIRExtendedTypes.hpp  LightningShaderIRLibrary.cpp  LightningShaderIRLibrary.hpp  LightningShaderIRMeta.cpp  LightningShaderIRMeta.hpp  LightningShaderIRPasses.cpp  LightningShaderIRPasses.hpp  LightningShaderIRProject.cpp  LightningShaderIRProject.hpp  LightningShaderIRReflection.cpp  LightningShaderIRReflection.hpp  LightningShaderIRShared.cpp  LightningShaderIRShared.hpp  LightningShaderIRTranslationPass.cpp  (+45 more)
Extensions/RayTracer/: CMakeLists.txt  Precompiled.cpp  Precompiled.hpp  RayTraceInitialize.cpp  RayTraceInitialize.hpp  RayTraceProperties.cpp  RayTraceProperties.hpp  RayTracedGraphicsProvider.cpp  RayTracedGraphicsProvider.hpp  RayTracedPhysicsProvider.cpp  RayTracedPhysicsProvider.hpp  RayTracedRenderer.cpp  RayTracedRenderer.hpp  RayTracer.cpp  RayTracer.hpp
Extensions/Scintilla/: CMakeLists.txt  ScintillaStandard.cpp
Extensions/SpirV/: CMakeLists.txt
Extensions/UiWidget/: CMakeLists.txt  Precompiled.cpp  Precompiled.hpp  UiDockLayout.cpp  UiDockLayout.hpp  UiFillLayout.cpp  UiFillLayout.hpp  UiLayout.cpp  UiLayout.hpp  UiRootWidget.cpp  UiRootWidget.hpp  UiStackLayout.cpp  UiStackLayout.hpp  UiWidget.cpp  UiWidget.hpp  UiWidgetEvents.cpp  UiWidgetEvents.hpp  UiWidgetStandard.cpp  UiWidgetStandard.hpp
Extensions/Widget/: Button.cpp  Button.hpp  CMakeLists.txt  CheckBox.cpp  CheckBox.hpp  Command.cpp  Command.hpp  CommandBinding.cpp  CommandBinding.hpp  Composite.cpp  Composite.hpp  Constants.cpp  Constants.hpp  ContextMenu.cpp  ContextMenu.hpp  Controls.cpp  Controls.hpp  EditText.cpp  EditText.hpp  Events.cpp  Events.hpp  ImageWidget.cpp  ImageWidget.hpp  LabeledTextBox.cpp  LabeledTextBox.hpp  Layout.cpp  Layout.hpp  LayoutProxy.cpp  LayoutProxy.hpp  ListControls.cpp  ListControls.hpp  MainWindow.cpp  MainWindow.hpp  Manipulator.cpp  Manipulator.hpp  Modal.cpp  Modal.hpp  MultiDock.cpp  MultiDock.hpp  MultiManager.cpp  (+43 more)
PlasmaLibraries/: .hgignore  CMakeLists.txt
PlasmaLibraries/Common/: CMakeLists.txt  CommonForwardDeclarations.hpp  CommonStandard.cpp  CommonStandard.hpp  Generated.cmake  Guid.cpp  PlasmaVisualizers.natvis  Platform.hpp  Singleton.hpp  ThreadableLoop.cpp  ThreadableLoop.hpp  Time.cpp  Time.hpp  VirtualAny.hpp
PlasmaLibraries/Dash/: BandwidthStats.hpp  CMakeLists.txt  DashStandard.cpp  DashStandard.hpp  Enums.hpp  LinkInbox.cpp  LinkInbox.hpp  LinkOutbox.cpp  LinkOutbox.hpp  Message.cpp  Message.hpp  MessageChannel.cpp  MessageChannel.hpp  MessageConfig.hpp  Packet.cpp  Packet.hpp  PacketConfig.hpp  Peer.cpp  Peer.hpp  PeerLink.cpp  PeerLink.hpp  Precompiled.cpp  Precompiled.hpp  ProtocolMessageData.hpp  Replica.cpp  Replica.hpp  ReplicaChannel.cpp  ReplicaChannel.hpp  ReplicaConfig.hpp  ReplicaProperty.cpp  ReplicaProperty.hpp  ReplicaStream.cpp  ReplicaStream.hpp  Replicator.cpp  Replicator.hpp  ReplicatorLink.cpp  ReplicatorLink.hpp  Route.cpp  Route.hpp
PlasmaLibraries/Geometry/: Aabb.cpp  Aabb.hpp  CMakeLists.txt  Clipper.cpp  Clipper.hpp  ClosestPoint.cpp  ConvexMeshDecomposition.cpp  ConvexMeshDecomposition.hpp  ConvexMeshShape.cpp  ConvexMeshShape.hpp  DebugDraw.cpp  DebugDraw.hpp  DebugDrawStack.cpp  (+57 more)
Projects/: CMakeLists.txt
Systems/: CMakeLists.txt
UnitTests/: .gitignore  CMakeLists.txt
(+1933 files in other folders)
